# weather-slack-bot

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  alert.py  badge.py  chart.py  cli.py  config.yml  config_loader.py  history.py  pyproject.toml  requirements.txt  ruff.toml  setup.sh  weather_bot.py  weather_history.json  weekly_summary.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: alert.yml  badge.yml  digest.yml  history.yml  pages.yml  publish.yml  test.yml  weather.yml  weekly.yml
docs/: index.html
locales/: en.yml  ja.yml  ko.yml
tests/: conftest.py  test_e2e.py  test_weather_bot.py
